# copter_aruco_nav

./: CMakeLists.txt  README.md  install_manifest.txt  main.cpp  map.txt  offboard_velocity.cpp  offboard_vpe  offboard_vpe.cpp  offboard_vpe.cpp.save  offboard_vpe_old.cpp
markers/: aruco_markers.cpp  aruco_markers.h  markers.h
